--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,6 +1,6 @@
 @import './variables.scss';
-@import './element-ui.scss';
 @import './sidebar.scss';
+@import './element-ui.scss';
 *{
     margin: 0;
     padding: 0;
@@ -9,4 +9,7 @@
 html,body,#app{
     width: 100vw;
     height: 100vh;
+}
+a{
+    text-decoration: none;
 }
