--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -14,12 +14,14 @@ $menuActiveText:#409EFF;
 $subMenuActiveText:#f4f4f5; // https://github.com/ElemeFE/element/issues/12951
 
 $menuBg:#304156;
-$menuHover:#263445;
+$menuHover:#21a1a0;
 
 $subMenuBg:#1f2d3d;
-$subMenuHover:#001528;
+$subMenuHover:#21a1a0;
 
 $sideBarWidth: 210px;
+
+$appMainBg:#e7eaef;
 
 // the :export directive is the magic sauce for webpack
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
@@ -32,4 +34,5 @@ $sideBarWidth: 210px;
   subMenuBg: $subMenuBg;
   subMenuHover: $subMenuHover;
   sideBarWidth: $sideBarWidth;
+  appMainBg:$appMainBg
 }
